RESOLVED FIXED12725
REGRESSION: onchange gets fired when clicking on a programmatically selected element in a listbox
https://bugs.webkit.org/show_bug.cgi?id=12725
Summary REGRESSION: onchange gets fired when clicking on a programmatically selected ...
Alexey Proskuryakov
Reported 2007-02-10 07:24:27 PST
Clicking on a listbox element that was selected from JS or via an HTML "selected" attribute now erroneously causes an onchange event to be dispatched.
Attachments
test case (5.34 KB, text/html)
2007-02-10 07:27 PST, Alexey Proskuryakov
no flags
test case (7.28 KB, text/html)
2007-02-11 11:24 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2007-02-10 07:27:35 PST
Created attachment 13105 [details] test case This is an extended fast/forms/listbox-onchange.html test. It also shows that setting value attribute of a multiple select listbox works incorrectly, not sure whether this is a regression, too.
Maciej Stachowiak
Comment 2 2007-02-10 19:15:15 PST
Alexey Proskuryakov
Comment 3 2007-02-11 11:24:49 PST
Created attachment 13121 [details] test case A bigger test case.
Adele Peterson
Comment 4 2007-03-17 00:57:41 PDT
Committed revision 20259.
Note You need to log in before you can comment on or make changes to this bug.