WebCore/html/HTMLOptionElement.h
@@ -65,6 +65,7 @@ public:
 
     bool selected() const { return m_selected; }
     void setSelected(bool);
+    void setSelectedState(bool);
 
     HTMLSelectElement* getSelect() const;
 
