WebCore/html/HTMLSelectElement.cpp
@@ -163,8 +163,7 @@ void HTMLSelectElement::deselectItems(HTMLOptionElement* excludeElement)
     for (i = 0; i < items.size(); i++) {
         if (items[i]->hasLocalName(optionTag) && (items[i] != excludeElement)) {
             HTMLOptionElement* element = static_cast<HTMLOptionElement*>(items[i]);
-            element->m_selected = false;
-            element->setChanged();
+            element->setSelectedState(false);
         }
     }
 }
@@ -175,25 +174,23 @@ void HTMLSelectElement::setSelectedIndex(int optionIndex, bool deselect, bool fi
     int listIndex = optionToListIndex(optionIndex);
     HTMLOptionElement* element = 0;
 
-    // Make a local copy, since setSelected() can update m_lastOnChangeIndex.
-    int lastOnChangeIndex = m_lastOnChangeIndex;
-
     if (listIndex >= 0) {
         if (m_activeSelectionAnchorIndex < 0 || deselect)
             setActiveSelectionAnchorIndex(listIndex);
         if (m_activeSelectionEndIndex < 0 || deselect)
             setActiveSelectionEndIndex(listIndex);
         element = static_cast<HTMLOptionElement*>(items[listIndex]);
-        element->setSelected(true);
-    } else if (deselect)
-        m_lastOnChangeIndex = -1;
+        element->setSelectedState(true);
+    }
 
     if (deselect)
         deselectItems(element);
 
-    ASSERT(m_lastOnChangeIndex == -1 || m_lastOnChangeIndex == optionIndex);
-    if (fireOnChange && usesMenuList() && lastOnChangeIndex != optionIndex)
-        onChange();
+    scrollToSelection();
+
+    //ASSERT(m_lastOnChangeIndex == -1 || m_lastOnChangeIndex == optionIndex);
+    if (fireOnChange && usesMenuList())
+        menuListOnChange();
 }
 
 int HTMLSelectElement::activeSelectionStartListIndex() const
@@ -265,10 +262,14 @@ void HTMLSelectElement::setValue(const String &value)
     // find the option with value() matching the given parameter
     // and make it the current selection.
     const Vector<HTMLElement*>& items = listItems();
+    unsigned optionIndex = 0;
     for (unsigned i = 0; i < items.size(); i++)
-        if (items[i]->hasLocalName(optionTag) && static_cast<HTMLOptionElement*>(items[i])->value() == value) {
-            static_cast<HTMLOptionElement*>(items[i])->setSelected(true);
-            return;
+        if (items[i]->hasLocalName(optionTag)) {
+            if (static_cast<HTMLOptionElement*>(items[i])->value() == value) {
+                setSelectedIndex(optionIndex, true);
+                return;
+            }
+            optionIndex++;
         }
 }
 
@@ -288,12 +289,13 @@ String HTMLSelectElement::stateValue() const
 void HTMLSelectElement::restoreState(const String& state)
 {
     recalcListItems();
-
+    
     const Vector<HTMLElement*>& items = listItems();
     int l = items.size();
     for (int i = 0; i < l; i++)
         if (items[i]->hasLocalName(optionTag))
-            static_cast<HTMLOptionElement*>(items[i])->setSelected(state[i] == 'X');
+            static_cast<HTMLOptionElement*>(items[i])->setSelectedState(state[i] == 'X');
+            
     setChanged(true);
 }
 
@@ -402,6 +404,8 @@ void HTMLSelectElement::selectAll()
     if (!renderer() || !multiple())
         return;
     
+    saveLastSelection();
+    
     m_activeSelectionState = true;
     setActiveSelectionAnchorIndex(nextSelectableListIndex(-1));
     setActiveSelectionEndIndex(previousSelectableListIndex(-1));
@@ -501,9 +505,9 @@ void HTMLSelectElement::recalcListItems() const
             m_listItems.append(static_cast<HTMLElement*>(current));
             if (!foundSelected && (usesMenuList() || (!m_multiple && static_cast<HTMLOptionElement*>(current)->selected()))) {
                 foundSelected = static_cast<HTMLOptionElement*>(current);
-                foundSelected->m_selected = true;
+                foundSelected->setSelectedState(true);
             } else if (foundSelected && !m_multiple && static_cast<HTMLOptionElement*>(current)->selected()) {
-                foundSelected->m_selected = false;
+                foundSelected->setSelectedState(false);
                 foundSelected = static_cast<HTMLOptionElement*>(current);
             }
         }
@@ -517,7 +521,6 @@ void HTMLSelectElement::recalcListItems() const
                 current = parent->nextSibling();
         }
     }
-    m_lastOnChangeIndex = -1;
     m_recalcListItems = false;
 }
 
@@ -552,38 +555,34 @@ void HTMLSelectElement::reset()
         if (items[i]->hasLocalName(optionTag)) {
             HTMLOptionElement *option = static_cast<HTMLOptionElement*>(items[i]);
             if (!option->getAttribute(selectedAttr).isNull()) {
-                option->setSelected(true);
+                option->setSelectedState(true);
                 optionSelected = true;
             } else
-                option->setSelected(false);
+                option->setSelectedState(false);
             if (!firstOption)
                 firstOption = option;
         }
     }
     if (!optionSelected && firstOption && usesMenuList())
-        firstOption->setSelected(true);
+        firstOption->setSelectedState(true);
+    
     setChanged(true);
-    m_lastOnChangeIndex = -1;
 }
 
-void HTMLSelectElement::notifyOptionSelected(HTMLOptionElement* selectedOption, bool selected)
+void HTMLSelectElement::dispatchFocusEvent()
 {
-    if (selected && !m_multiple)
-        deselectItems(selectedOption);
-
-    scrollToSelection();
-
-    m_lastOnChangeIndex = selectedOption->index();
-    setChanged(true);
+#if !ARROW_KEYS_POP_MENU
+    if (usesMenuList())
+        saveLastSelection();
+#endif
+    HTMLGenericFormElement::dispatchFocusEvent();
 }
 
 void HTMLSelectElement::dispatchBlurEvent()
 {
 #if !ARROW_KEYS_POP_MENU
-    if (usesMenuList() && selectedIndex() != m_lastOnChangeIndex) {
-        m_lastOnChangeIndex = selectedIndex();
-        onChange();
-    }
+    if (usesMenuList())
+        menuListOnChange();
 #endif
     HTMLGenericFormElement::dispatchBlurEvent();
 }
@@ -633,6 +632,7 @@ void HTMLSelectElement::menuListDefaultEventHandler(Event* evt)
         }
         if ((keyIdentifier == "Down" || keyIdentifier == "Up" || keyIdentifier == "U+000020") && renderer() && usesMenuList()) {
             focus();
+            saveLastSelection();
             menuList->showPopup();
             handled = true;
         }
@@ -657,6 +657,7 @@ void HTMLSelectElement::menuListDefaultEventHandler(Event* evt)
                 setSelectedIndex(listToOptionIndex(listIndex));
             handled = true;
         } else if (keyIdentifier == "Enter") {
+            saveLastSelection();
             setSelectedIndex(listToOptionIndex(listIndex), true, true);
         }
 #endif
@@ -668,8 +669,10 @@ void HTMLSelectElement::menuListDefaultEventHandler(Event* evt)
         focus();
         if (menuList->popupIsVisible())
             menuList->hidePopup();
-        else
+        else {
+            saveLastSelection();
             menuList->showPopup();
+        }
         evt->setDefaultHandled();
     }
 }
@@ -681,9 +684,12 @@ void HTMLSelectElement::listBoxDefaultEventHandler(Event* evt)
 
     if (evt->type() == mousedownEvent) {
         focus();
+        
         MouseEvent* mEvt = static_cast<MouseEvent*>(evt);
         int listIndex = static_cast<RenderListBox*>(renderer())->listIndexAtOffset(mEvt->offsetX(), mEvt->offsetY());
         if (listIndex >= 0) {
+            saveLastSelection();
+
             m_activeSelectionState = true;
             
             bool multiSelectKeyPressed = false;
@@ -706,7 +712,7 @@ void HTMLSelectElement::listBoxDefaultEventHandler(Event* evt)
                     m_activeSelectionState = false;
 
                 if (!m_activeSelectionState)
-                    option->m_selected = false;
+                    option->setSelectedState(false);
             }
             
             // If we're not in any special multiple selection mode, then deselect all other items, excluding the clicked option.
@@ -720,7 +726,7 @@ void HTMLSelectElement::listBoxDefaultEventHandler(Event* evt)
 
             // Set the selection state of the clicked option
             if (option && !option->disabled())
-                option->m_selected = true;
+                option->setSelectedState(true);
             
             // If there was no selectedIndex() for the previous initialization, or
             // If we're doing a single selection, or a multiple selection (using cmd or ctrl), then initialize the anchor index to the listIndex that just got clicked.
@@ -742,7 +748,7 @@ void HTMLSelectElement::listBoxDefaultEventHandler(Event* evt)
         if (!evt->isKeyboardEvent())
             return;
         String keyIdentifier = static_cast<KeyboardEvent*>(evt)->keyIdentifier();
-        
+
         if (form() && keyIdentifier == "Enter") {
             blur();
             // Make sure the form hasn't been destroyed during the blur.
@@ -768,6 +774,8 @@ void HTMLSelectElement::listBoxDefaultEventHandler(Event* evt)
         }
         
         if (keyIdentifier == "Down" || keyIdentifier == "Up") {
+            saveLastSelection();
+
             ASSERT(endIndex >= 0 && (unsigned)endIndex < listItems().size()); 
             setActiveSelectionEndIndex(endIndex);
             
@@ -820,11 +828,11 @@ void HTMLSelectElement::updateListBoxSelection(bool deselectOtherOptions)
             HTMLOptionElement* option = static_cast<HTMLOptionElement*>(items[i]);
             if (!option->disabled()) {
                 if (i >= start && i <= end)
-                    option->m_selected = m_activeSelectionState;
+                    option->setSelectedState(m_activeSelectionState);
                 else if (deselectOtherOptions)
-                    option->m_selected = false;
+                    option->setSelectedState(false);
                 else
-                    option->m_selected = m_cachedStateForActiveSelection[i];
+                    option->setSelectedState(m_cachedStateForActiveSelection[i]);
             }
         }
     }
@@ -832,20 +840,18 @@ void HTMLSelectElement::updateListBoxSelection(bool deselectOtherOptions)
     scrollToSelection();
 }
 
+void HTMLSelectElement::menuListOnChange()
+{
+    if (m_lastOnChangeIndex != selectedIndex())
+        onChange();
+}
+
 void HTMLSelectElement::listBoxOnChange()
 {
     const Vector<HTMLElement*>& items = listItems();
     
-    // If the cached selection list is empty, or the size has changed, then rebuild the list, fire onChange, and return early.
+    // If the cached selection list is empty, or the size has changed, then fire onChange, and return early.
     if (m_lastOnChangeSelection.isEmpty() || m_lastOnChangeSelection.size() != items.size()) {
-        m_lastOnChangeSelection.clear();
-        for (unsigned i = 0; i < items.size(); i++) {
-            if (items[i]->hasLocalName(optionTag)) {
-                HTMLOptionElement* option = static_cast<HTMLOptionElement*>(items[i]);
-                m_lastOnChangeSelection.append(option->selected());
-            } else
-                m_lastOnChangeSelection.append(false);
-        }
         onChange();
         return;
     }
@@ -862,6 +868,24 @@ void HTMLSelectElement::listBoxOnChange()
     }
     if (fireOnChange)
         onChange();
+}
+
+void HTMLSelectElement::saveLastSelection()
+{
+    const Vector<HTMLElement*>& items = listItems();
+
+    if (usesMenuList()) {
+        m_lastOnChangeIndex = selectedIndex();
+    } else {
+        m_lastOnChangeSelection.clear();
+        for (unsigned i = 0; i < items.size(); i++) {
+            if (items[i]->hasLocalName(optionTag)) {
+                HTMLOptionElement* option = static_cast<HTMLOptionElement*>(items[i]);
+                m_lastOnChangeSelection.append(option->selected());
+            } else
+                m_lastOnChangeSelection.append(false);
+        }
+    }
 }
 
 static String stripLeadingWhiteSpace(const String& string)
